--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -101,10 +101,6 @@ i.open {
   animation-fill-mode: forwards;
 }
 
-table {
-  margin: 0 -1px;
-}
-
 // The style below is adapted from http://rianrietveld.com/2015/04/04/the-screen-reader-text-class-why-and-how/
 .sr-only {
   border: 0;
